--- a/producto4.html
+++ b/producto4.html
@@ -125,10 +125,10 @@
                     <h5><del>16.99$</del></h5>
                     <span id="precio-iva" class="badge badge-default">5.99$&nbsp;<small class="font-italic">IVA&nbsp;incluido</small></span>
                     <hr>
-                    <form action="">
+                    <form action="" class="container">
                         <div class="form-group row">
-                            <label for="size" class="col-12 col-md-4 text-md-right text-left">Tamaño / Talla</label>
-                            <select name="size" id="size" class="form-control col-12 col-md-8">
+                            <label for="size" class="col-12 col-md-5 col-lg-4 p-2">Tamaño / Talla</label>
+                            <select name="size" id="size" class="form-control col-12 col-md-7 col-lg-8">
                                 <option value="s">34</option>
                                 <option value="m">35</option>
                                 <option value="l">40</option>
@@ -136,20 +136,20 @@
                             </select>
                         </div>
                         <div class="form-group row">
-                            <label for="color" class="col-12 col-md-4 text-md-right text-left">Color</label>
-                            <select name="color" id="color" class="form-control col-12 col-md-8">
+                            <label for="color" class="col-12 col-md-2 p-2">Color</label>
+                            <select name="color" id="color" class="form-control col-12 col-md-10">
                                 <option value="">Amarillo</option>
                                 <option value="">Azul</option>
                                 <option value="">Rojo</option>
                             </select>
                         </div>
-                        <div class="form-group row">
-                            <a id="plus" href="" class="col-1 offset-3 col-md-1"><i class="fa fa-plus"></i></a>
-                            <input type="text" name="contidad" id="cantidad" class="form-control col-4 col-md-2 text-center" value="0">
-                            <a id="minus" href="" class="col-1 col-md-1"><i class="fa fa-minus"></i></a>
-                            <a id="addCar" href="#" class="btn btn-platzi btn-block col-12 col-md-5">
+                        <div class="form-group row justify-content-between">
+                            <a id="plus" href="" class="col-1 col-md-1 col-lg-1 p-2"><i class="fa fa-plus"></i></a>
+                            <input type="text" name="contidad" id="cantidad" class="form-control col-2 col-md-2 col-lg-2 text-center" value="0">
+                            <a id="minus" href="" class="col-1 col-md-1 col-lg-1 p-2"><i class="fa fa-minus"></i></a>
+                            <a id="addCar" href="#" class="btn btn-platzi btn-block col-6 col-md-7 col-lg-8">
                                 <i class="fa fa-shopping-cart"></i>
-                                Añadir
+                                Añadir a la cesta
                             </a>
                         </div>
                         <div class="form-group row">
